# system-monitor-v2

./: CMakeLists.txt  README.md
src/: main.cpp  process_utils.cpp  process_utils.h  renderer.cpp  renderer.h  system_stats.cpp  system_stats.h
